# digi_brain

./: .env.example  .gitignore  .mcp.json  DOCUMENTATION.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
.github/workflows/: deploy.yml
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_task_links_and_views.py  003_time_entries.py  004_finance.py  005_dashboard_config.py  006_linked_topic.py  007_story_points.py  008_task_icon.py  010_inbox.py  011_calendar.py  012_shopping.py  013_user_totp.py  014_api_tokens.py
backend/app/: main.py
design_handoff_digibrain_app/: README.md
design_handoff_digibrain_app/design_system/: README.md
design_handoff_digibrain_app/designs/: App.jsx  index.html  styles.css
design_handoff_digibrain_app/docs/: DECISIONS.md
design_handoff_inbox/: README.md
design_handoff_inbox/designs/: Inbox.jsx  styles.css  tokens.css
docs/: AI_INTEGRATION.md  CALDAV_SYNC.md  CALENDAR_INTEGRATION.md  DATABASE.md  DECISIONS.md  DEPLOYMENT.md  EXTENSIBILITY.md  INBOX_IMAP_SYNC.md  MCP_SERVER.md  NEXTCLOUD_OBSIDIAN_SYNC.md  TOPICS.md  TWO_FACTOR_AUTH.md  V0_DEV_PROMPT.md  V0_DEV_PROMPT_SHORT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css
mcp-server/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
mcp-server/digibrain_mcp/: __init__.py  client.py  config.py  server.py
mcp-server/digibrain_mcp/oauth/: __init__.py  consent.py  provider.py  store.py
(+152 files in other folders)
