[project]
name = "digibrain-mcp"
version = "0.1.0"
description = "Local MCP server exposing DigiBrain (topics, tasks, notes, time) to Claude Desktop."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
digibrain-mcp = "digibrain_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["digibrain_mcp"]
